--- a/style.css
+++ b/style.css
@@ -63,3 +63,28 @@ html,body{
     font-weight: 600;
     padding: 20px 0px;
 }
+#about-us{
+    padding: 60px 50px;
+}
+#about-us h3{
+    font-size: 30px;
+    font-weight: 500;
+    letter-spacing: 1.5px;
+    padding:30px  0px;
+}
+#about-beautian{
+    display: flex;
+    justify-content: space-between;
+}
+#beautian-detail{
+    border-left: solid 2px #000;
+    padding: 30px 40px;
+    font-size: 20px;
+    font-weight: 400;
+    word-spacing: 10px;
+    letter-spacing: 3px;
+}
+#beautian-image img{
+    height: 350px;
+    padding: 0px 30px;
+}
