--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ html,body{
     align-items: center;
     justify-content: space-between;
 }
+#cover-video{
+    height: 300px;
+    width: 100%;
+    padding: 40px 0px;
+    object-fit: cover;
+}
 #course{
     display: flex;
     justify-content: space-between;
