--- a/style.css
+++ b/style.css
@@ -29,10 +29,16 @@ html,body{
     justify-content: space-between;
 }
 #cover-video{
-    height: 300px;
-    width: 100%;
-    padding: 40px 0px;
-    object-fit: cover;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+#cover-video video{
+    height: 800px;
+    width: 60%;
+    padding: 50px 40px;
+    object-position: 5% 10%;
+    object-fit: none;
 }
 #course{
     display: flex;
